fix typo in composer json

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
 	"authors" : [ {
 		"name": "Shannon Wynter",
 		"homepage": "http://fremnet.net",
-		"role": Developer"
+		"role": "Developer"
 	} ],
 
 	"autoload": {
